Prevent horizontal scroll on mobile
Made-with: Cursor

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
